--- a/default.css
+++ b/default.css
@@ -99,3 +99,19 @@ blockquote { background: url('images/blockbg.jpg') repeat-x; color: #666; paddin
 	 position: absolute; letter-spacing: -2px; font-size: 32px; top: 15px; left: 20px;
 }
 #topbar h3 { margin: 0 0 3px 0; padding: 0; }
+
+table
+{
+    font-family: Times;
+    font-size: 28px;
+}
+
+.index
+{ width:600px;background-color:#eee;border-collapse:collapse;  
+}
+.index td { padding:3px;border:1px solid white;font-size:       28px; text-align:justify; }
+.index th { padding:3px;border:1px solid white;font-size:       28px; text-align:justify; }
+td.head { padding:10px;border:1px solid white;font-size:       28px; text-align: center;}
+
+.here {background-color:#ccff99;}
+
