--- a/default.css
+++ b/default.css
@@ -1,5 +1,5 @@
 /* the fons, margins, color, etc of everything */
-#html, body { font: 13px trebuchet ms; margin: 0; padding: 0; color: #000; height: 100%; background: #fff;}/*#8fb8db*/
+#html, body { font-family: sans-serif; font: 13px trebuchet ms; margin: 0; padding: 0; color: #000; height: 100%; background: #fff;}/*#8fb8db*/
 
 /* what holds everything in place */
 /*#container { background: #fff; width: 820px; margin: 10px auto; padding: 2px; }
@@ -102,7 +102,7 @@ blockquote { background: url('images/blockbg.jpg') repeat-x; color: #666; paddin
 
 table
 {
-    font-family: Times;
+    font-family: sans-serif;
     font-size: 28px;
 }
 
